5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1638_2729.log
== TEST (2019-04-16 02:21:42) 
-- CODE:
n1 = int(input("Digite um numero n1:"))
n2 = int(input("Digite um numero n2:")) 
if ((n1*n21)%2==0):
	print (n1+n2)
else:
	print (n2-n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ((n1*n21)%2==0):
NameError: name 'n21' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 02:22:47) 
-- CODE:
n1 = int(input("Digite um numero n1:"))
n2 = int(input("Digite um numero n2:")) 
prod = n1*n2
if (prod%2==0):
	print (n1+n2)
else:
	print (n2-n1)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 02:23:00) 
-- CODE:
n1 = int(input("Digite um numero n1:"))
n2 = int(input("Digite um numero n2:")) 
prod = n1*n2
if (prod%2==0):
	print (n1+n2)
else:
	print (n2-n1)
-- EXECUTION TIME:
0.136948
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
